--- a/ApacheCMDA-Frontend/app/views/climate/aboutus.scala.html
+++ b/ApacheCMDA-Frontend/app/views/climate/aboutus.scala.html
@@ -22,6 +22,7 @@
    <h1>About Us</h1>
    	<div class="jumbotron">
    <p>We are a joint team between Jet Propulsion Laboratory (JPL) and Carnegie Mellon University (CMU).</p>
+   <p>Currently, this is being actively developed by Bowen Zhang, Chia-Chuan Wu, and Ning Du.</p>
    <br>
    <h3><strong>JPL Contributors</strong></h3>
    <p>Seungwon Lee:		<a href="mailto:seungwon.lee@@jpl.nasa.gov">seungwon.lee@@jpl.nasa.gov</a></p>
