--- a/ApacheCMDA-Frontend/app/views/climate/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/climate/header.scala.html
@@ -69,6 +69,14 @@
 						<li><a href="@routes.AboutusController.aboutProject()">About project</a></li>
 						</ul>
 					</li>
+					<li class="dropdown"><a href="#"
+						class="dropdown-toggle" data-toggle="dropdown">Social Network<b
+							class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="/login">Log In</a></li>
+							<li><a href="/signup">Sign Up</a></li>
+						</ul>
+					</li>
 					
 				</ul>
 			</div>
