--- a/ApacheCMDA-Frontend/app/views/climate/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/climate/header.scala.html
@@ -73,8 +73,8 @@
 						class="dropdown-toggle" data-toggle="dropdown">Social Network<b
 							class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/login">Log In</a></li>
-							<li><a href="/signup">Sign Up</a></li>
+							<li><a href="@routes.LoginController.login()">Log In</a></li>
+							<li><a href="@routes.SignupController.signup()">Sign Up</a></li>
 						</ul>
 					</li>
 					
