--- a/ApacheCMDA-Frontend/app/views/network/login.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/login.scala.html
@@ -62,7 +62,7 @@
           <div class="form-title">
             <h1><a href="/login" class="title_lable <%=lc%>">Log in</a> / <a href='/signup' class="title_lable <%=sc%>">Sign up</a></h1>
           </div>
-          <form class="form-horizontal" data-target="<%=stage %>" action="<%=formTarget %>" method="POST" onsubmit="return passwordCheck()" id="logForm"> <!-- Form -->
+          <form class="form-horizontal" action="/network/home" method="POST" id="logForm"> <!-- Form -->
             <div class="form-group">
               <label for="inputUname" class="col-sm-2 control-label">Username</label>
               <div class="col-sm-10">
