--- a/ApacheCMDA-Frontend/app/views/network/login.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/login.scala.html
@@ -14,6 +14,7 @@
 * See the License for the specific language governing permissions and         *
 * limitations under the License.											   *
 *******************************************************************************@
+@(user: User, userForm: play.data.Form[User], error: String)
 
 <!DOCTYPE html>
 <html lang="en">
@@ -63,7 +64,8 @@
             <h1><a href="/login" class="title_lable <%=lc%>">Log in</a> / <a href='/signup' class="title_lable <%=sc%>">Sign up</a></h1>
           </div>
           <form class="form-horizontal" action="/network/home" method="POST" id="logForm"> <!-- Form -->
-            <div class="form-group">
+              @if(error == null || error.isEmpty()) {
+              <div class="form-group">
               <label for="inputUname" class="col-sm-2 control-label">Username</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" name="username" id="inputUname">
@@ -75,6 +77,23 @@
                 <input type="password" class="form-control" id="inputPassword" name="password">
               </div>
             </div>
+              } else {
+                  <div class="form-group">
+                      <label for="inputUname" class="col-sm-2 control-label">Username</label>
+                      <div class="col-sm-10">
+                          <input type="text" class="form-control" name="username" id="inputUname" placeholder="@user.getUserName">
+                      </div>
+                  </div>
+                  <div class="form-group">
+                      <label for="inputPassword" class="col-sm-2 control-label">Password</label>
+                      <div class="col-sm-10">
+                          <input type="password" class="form-control" id="inputPassword" name="password">
+                      </div>
+                  </div>
+              <div class="warning " id="warningbar">
+                  <p>@error</p>
+              </div>
+              }
             @*<div class="form-group <%=secondPasswdClass%>" id="pwd2" >*@
               @*<label for="inputPassword2" class="col-sm-2 control-label ">Password</label>*@
               @*<div class="col-sm-10">*@
