--- a/ApacheCMDA-Frontend/app/views/network/login.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/login.scala.html
@@ -14,7 +14,7 @@
 * See the License for the specific language governing permissions and         *
 * limitations under the License.											   *
 *******************************************************************************@
-@(user: User, userForm: play.data.Form[User], error: String)
+@(username: String, error: String)
 
 <!DOCTYPE html>
 <html lang="en">
@@ -81,18 +81,25 @@
                   <div class="form-group">
                       <label for="inputUname" class="col-sm-2 control-label">Username</label>
                       <div class="col-sm-10">
-                          <input type="text" class="form-control" name="username" id="inputUname" placeholder="@user.getUserName">
+                          <input type="text" class="form-control" name="username" id="inputUname" placeholder="@username">
                       </div>
                   </div>
+                  @if(!error.contains("Password")) {
+                      <div class="warning " id="warningbar">
+                          <p>@error</p>
+                      </div>
+                  }
                   <div class="form-group">
                       <label for="inputPassword" class="col-sm-2 control-label">Password</label>
                       <div class="col-sm-10">
                           <input type="password" class="form-control" id="inputPassword" name="password">
                       </div>
                   </div>
-              <div class="warning " id="warningbar">
-                  <p>@error</p>
-              </div>
+                  @if(error.contains("Password")) {
+                      <div class="warning " id="warningbar">
+                          <p>@error</p>
+                      </div>
+                  }
               }
             @*<div class="form-group <%=secondPasswdClass%>" id="pwd2" >*@
               @*<label for="inputPassword2" class="col-sm-2 control-label ">Password</label>*@
