--- a/ApacheCMDA-Frontend/app/views/network/followers.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/followers.scala.html
@@ -15,10 +15,13 @@
 * limitations under the License.											   *
 *******************************************************************************@
 
+@(users: List[User])
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Log In</title>
+<head>
+  <meta charset="UTF-8">
+  <title>Home Page</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,6 +32,8 @@
     href='@routes.Assets.at("stylesheets/navbar-fixed-top.css")'>
     <link rel="stylesheet"
     href='@routes.Assets.at("stylesheets/custom.css")'>
+    <link rel="stylesheet"
+    href='@routes.Assets.at("stylesheets/profile.css")'>
     <link rel="stylesheet" media="screen"
     href='@routes.Assets.at("stylesheets/main.css")'>
     <link rel="shortcut icon" type="image/png"
@@ -53,55 +58,36 @@
     <script type='text/javascript' src='@routes.Assets.at("javascripts/keyword_tree.js")'></script>
 
     <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
-  </head>
-  <body>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <div class="well well-sm">
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
+                        </div>
+                        <div class="col-sm-6 col-md-8">
 
-    <div class="container-fluid row">
-      <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
-        <div class="login-box">
-          <div class="form-title">
-            <h1><a href="@routes.LoginController.login("", "")" class="title_lable <%=lc%>">Log in</a> / <a href='/signup' class="title_lable <%=sc%>">Sign up</a></h1>
-          </div>
-          <form class="form-horizontal" action="@routes.SignupController.newUser()" method="POST" id="logForm"> <!-- Form -->
-            <div class="form-group">
-              <label for="inputUname" class="col-sm-2 control-label">Username</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" name="username" id="inputUname">
-              </div>
+                            <p>
+
+                                <!-- Split button -->
+                            <div class="btn-group">
+                         	<h4>Followers</h4>
+                         
+                                <ul>
+                                @for(user<-users){
+                                    <li>@user.getFirstName @user.getLastName </li>
+                                    }
+                                </ul>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-              <label for="inputPassword" class="col-sm-2 control-label">Password</label>
-              <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword" name="password">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="firstName" class="col-sm-2 control-label">First Name</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="firstName" name="firstName">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="lastName" class="col-sm-2 control-label">Last Name</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastName" name="lastName">
-              </div>
-            </div>
-              <div class="form-group">
-                  <label for="affiliation" class="col-sm-2 control-label ">Affiliation</label>
-                  <div class="col-sm-10">
-                      <input type="text" class="form-control" id="affiliation" name="affiliation">
-                  </div>
-              </div>
-            <div class="form-group">
-              <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary">Log in</button>
-              </div>
-            </div>
-          </form> <!-- /Form -->
         </div>
-      </div>
     </div>
-
-  </body>
+</body>
 </html>
