--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -60,6 +60,8 @@
     <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
 </head>
 <body>
+    @header()
+    <br/>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-6">
