--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -60,7 +60,7 @@
     <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
 </head>
 <body>
-    @header()
+    @header(user.getUserName())
     <br/>
     <div class="container">
         <div class="row">
