Add link to home page in the header

--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -60,7 +60,7 @@
     <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
 </head>
 <body>
-    @header(user.getUserName())
+    @header(user.getUserName(), user.getId().toString)
     <br/>
     <div class="container">
         <div class="row">
