--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -14,14 +14,14 @@
 * See the License for the specific language governing permissions and         *
 * limitations under the License.											   *
 *******************************************************************************@
-@(username: String)
+@(username: String, id: String)
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-collapse collapse" style="height:">
       <ul class="nav navbar-nav">
 
-        <li><a href="#">Home</a>
+        <li><a href="@routes.HomeController.home(id)">Home</a>
         </li>
         <li><a href="#">Post</a>
         </li>
