--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -44,6 +44,8 @@
     rel="stylesheet" />
     <link href='@routes.Assets.at("stylesheets/style.css")'
     rel="stylesheet" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src='@routes.Assets.at("javascripts/jquery-1.9.0.min.js")'
     type="text/javascript"></script>
@@ -62,39 +64,31 @@
 <body>
     @header(user.getUserName(), user.getId().toString)
     <br/>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-6">
-                <div class="well well-sm">
-                    <div class="row">
-                        <div class="col-sm-6 col-md-4">
-                            <img src="http://placehold.it/380x500" alt="" class="img-rounded img-responsive" />
-                        </div>
-                        <div class="col-sm-6 col-md-8">
-                            <h4>
-                                @user.getFirstName @user.getLastName</h4>
-                            <p>
-                                <i class="glyphicon glyphicon-user"></i>@user.getUserName()
-                                <br />
-                                <i class="glyphicon glyphicon-home"></i>@user.getAffiliation()
-                                <br />
-                                <!-- Split button -->
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-primary">
-                                    Social</button>
-                                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                                    <span class="caret"></span><span class="sr-only">Social</span>
-                                </button>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Followers</a></li>
-                                    <li><a href="https://plus.google.com/+Jquery2dotnet/posts">Following</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+    <div class="container" style="margin-top: 20px; margin-bottom: 20px;">
+        <div class="row panel">
+            <div class="col-md-4 bg_blur ">
+                <a href="#" class="follow_btn hidden-xs">Follow</a>
+            </div>
+            <div class="col-md-8  col-xs-12">
+                <img src="http://placehold.it/380x500" class="img-thumbnail picture hidden-xs" />
+                <img src="http://placehold.it/380x500" class="img-thumbnail visible-xs picture_mob" />
+                <div class="header">
+                    <h1>@user.getFirstName @user.getLastName</h1>
+                    <h4>@user.getAffiliation</h4>
+                    <span></span>
                 </div>
             </div>
         </div>
+
+        <div class="row nav">
+            <div class="col-md-4"></div>
+            <div class="col-md-8 col-xs-12" style="margin: 0px;padding: 0px;">
+                <div class="col-md-4 col-xs-4 well"><i class="glyphicon-home glyphicon"></i> About</div>
+                <div class="col-md-4 col-xs-4 well"><i class="glyphicon-pencil glyphicon"></i> Post</div>
+                <div class="col-md-4 col-xs-4 well"><i class="fa fa-thumbs-o-up fa-lg"></i> Followers</div>
+            </div>
+        </div>
     </div>
+
 </body>
 </html>
