--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -14,7 +14,9 @@
 * See the License for the specific language governing permissions and *
 * limitations under the License. *
 *******************************************************************************@
-@(user: User, userForm: play.data.Form[User])
+
+@(user: User, userForm: play.data.Form[User], users: List[User])
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -77,7 +79,20 @@
                         <span></span>
                     </div>
                 </div>
+              
             </div>
-
+              <div class="row panel" style="color: black"> 
+              <div style="width:20%">
+              <p> 
+              <h4>Followers</h4>
+              <ul>
+                                @for(user<-users){
+                                    <li>@user.getFirstName @user.getLastName </li>
+                                    }
+                                </ul>
+                                </p>
+              
+              </div> </div>
+</div>
     </body>
 </html>
