--- a/ApacheCMDA-Frontend/public/stylesheets/profile.css
+++ b/ApacheCMDA-Frontend/public/stylesheets/profile.css
@@ -1,4 +1,6 @@
-body{padding-top:30px;}
+body {
+    padding-top: 30px;
+}
 
 small {
     display: block;
@@ -7,49 +9,47 @@ small {
 }
 
 .well {
-    margin-top:-20px;
-    background-color:#007FBD;
-    border:2px solid #0077B2;
-    text-align:center;
-    cursor:pointer;
+    margin-top: -20px;
+    background-color: #007FBD;
+    border: 2px solid #0077B2;
+    text-align: center;
+    cursor: pointer;
     font-size: 25px;
     padding: 15px;
     border-radius: 0px !important;
 }
 
 .well:hover {
-    margin-top:-20px;
-    background-color:#0077B2;
-    border:2px solid #0077B2;
-    text-align:center;
-    cursor:pointer;
+    margin-top: -20px;
+    background-color: #0077B2;
+    border: 2px solid #0077B2;
+    text-align: center;
+    cursor: pointer;
     font-size: 25px;
     padding: 15px;
     border-radius: 0px !important;
-    border-bottom : 2px solid rgba(97, 203, 255, 0.65);
+    border-bottom: 2px solid rgba(97, 203, 255, 0.65);
 }
 
 body {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
-    color: #fff;
+    color: #7f7f7f;
     background-color: #F1F1F1;
 }
 
-
-
-.bg_blur
-{
-    background-image:url('https://upload.wikimedia.org/wikipedia/commons/0/06/Panda_San_Diego_2006.jpg');
+.bg_blur {
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/0/06/Panda_San_Diego_2006.jpg');
     height: 300px;
     background-size: cover;
 }
-.wall-paper
-{
-    background-image:url('http://www.uib.no/sites/w3.uib.no/files/media/colourbox1886329_0.jpg');
+
+.wall-paper {
+    background-image: url('http://www.uib.no/sites/w3.uib.no/files/media/colourbox1886329_0.jpg');
     background-size: cover;
 }
+
 .follow_btn {
     text-decoration: none;
     position: absolute;
@@ -82,28 +82,28 @@ body {
     border: 4px solid rgba(255, 255, 255, 0.8);
 }
 
-.header{
-    color : #808080;
-    margin-left:10%;
-    margin-top:70px;
+.header {
+    color: #808080;
+    margin-left: 10%;
+    margin-top: 70px;
 }
 
-.picture{
-    height:150px;
-    width:150px;
-    position:absolute;
+.picture {
+    height: 150px;
+    width: 150px;
+    position: absolute;
     top: 75px;
-    left:-75px;
+    left: -75px;
 }
 
-.picture_mob{
+.picture_mob {
     position: absolute;
     width: 35%;
     left: 35%;
     bottom: 70%;
 }
 
-.btn-style{
+.btn-style {
     color: #fff;
     background-color: #007FBE;
     border-color: #adadad;
@@ -118,16 +118,13 @@ body {
 
 }
 
-
 @media (max-width: 767px) {
-    .header{
-        text-align : center;
+    .header {
+        text-align: center;
     }
 
-
-
-    .nav{
-        margin-top : 30px;
+    .nav {
+        margin-top: 30px;
     }
 }
 
