--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -82,6 +82,14 @@
                 </div>
 
             </div>
+            <div class="row nav">
+                <div class="col-md-4"></div>
+                <div class="col-md-8 col-xs-12" style="margin: 0px;padding: 0px;">
+                    <div class="col-md-4 col-xs-4 well"><i class="glyphicon-home glyphicon"></i> About</div>
+                    <div class="col-md-4 col-xs-4 well"><i class="glyphicon-pencil glyphicon"></i> Post</div>
+                    <div class="col-md-4 col-xs-4 well"><i class="fa fa-thumbs-o-up fa-lg"></i> Followers</div>
+                </div>
+            </div>
             <div class="wrapper">
                 <div class="box">
                     <div class="row row-offcanvas row-offcanvas-left">
