--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -81,56 +81,44 @@
 
             </div>
             <div class="row nav">
-                <div class="col-md-4"></div>
+                <div class="col-md-4 row-xs-12">
+                    <div class="row-md-3 row-xs-3"><i class="glyphicon glyphicon-user"></i> @user.getUserName()</div>
+                    <div class="row-md-3 row-xs-3"><i class="glyphicon-pencil glyphicon"></i> @user.getEmail</div>
+                    <div class="row-md-3 row-xs-3"><i class="fa fa-thumbs-o-up fa-lg"></i> @user.getTitle</div>
+                    <div class="row-md-3 row-xs-3"><i class="fa fa-thumbs-o-up fa-lg"></i> @user.getResearchFields</div>
+
+                </div>
                 <div class="col-md-8 col-xs-12" style="margin: 0px;padding: 0px;">
                     <div class="col-md-4 col-xs-4 well"><i class="glyphicon-home glyphicon"></i> About</div>
                     <div class="col-md-4 col-xs-4 well"><i class="glyphicon-pencil glyphicon"></i> Post</div>
                     <div class="col-md-4 col-xs-4 well"><i class="fa fa-thumbs-o-up fa-lg"></i> Followers</div>
                 </div>
             </div>
-            <div class="wrapper">
-                <div class="box">
-                    <div class="row row-offcanvas row-offcanvas-left">
-                            <!-- sidebar -->
-                        <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
-                            <div class="col-sm-6 col-md-8">
-                                <h4> @user.getFirstName @user.getLastName</h4>
-                                <i class="glyphicon glyphicon-user"></i>@user.getUserName()
-                                <br>
-                                <i class="glyphicon glyphicon-home"></i>@user.getEmail
-                                <br>
-                                <i class="glyphicon glyphicon-home"></i>@user.getTitle
-                                <br>
-                                <i class="glyphicon glyphicon-home"></i>@user.getResearchFields
+            <div class="box row" id="main">
+                <div class="col-md-4 row-xs-12"></div>
+                <div class="col-md-8 col-xs-12" style="margin: 0px;padding: 0px;">
+                    <!-- /top nav -->
+                <div class="full col-sm-12">
+                    <div class="row">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="clearfix"></div>
+                                This is first post
+                                <hr>
+                                Likes: 15
                             </div>
                         </div>
-                        <div class="column col-sm-10 col-xs-11" id="main">
-                                <!-- /top nav -->
-                            <div class="full col-sm-10">
-                                <div class="row">
-                                    <div class="panel panel-default">
-                                        <div class="panel-body">
-                                            <div class="clearfix"></div>
-                                            This is first post
-                                            <hr>
-                                            Likes: 15
-                                        </div>
-                                    </div>
 
-                                    <div class="panel panel-default">
-                                        <div class="panel-body">
-                                            <div class="clearfix"></div>
-                                            This is second post
-                                            <hr>
-                                            Likes: 15
-                                        </div>
-                                    </div>
-                                </div>
-                            </div><!--/row-->
-                        </div><!-- /padding -->
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="clearfix"></div>
+                                This is second post
+                                <hr>
+                                Likes: 15
+                            </div>
+                        </div>
                     </div>
-                        <!-- /main -->
-                </div>
+                </div><!--/row-->
             </div>
         </div>
     </div>
