--- a/ApacheCMDA-Frontend/public/stylesheets/profile.css
+++ b/ApacheCMDA-Frontend/public/stylesheets/profile.css
@@ -8,6 +8,10 @@ small {
     color: #999;
 }
 
+.well-margin {
+    margin-top: -20px;
+    border-radius: 0px !important;
+}
 .well {
     margin-top: -20px;
     background-color: #007FBD;
