--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -65,7 +65,7 @@
     <body>
         @header(user.getUserName(), user.getId().toString)
         <br/>
-        <div class="container" style="margin-top : 20 px ; margin-bottom : 20 px ;">
+        <div class="container" style="margin-top:20 px;margin-bottom:20px;">
             <div class="row panel wall-paper">
                 <div class="col-md-4 bg_blur ">
                     <a href="#" class="follow_btn hidden-xs">Follow</a>
@@ -88,19 +88,21 @@
                     <div class="row-md-3 row-xs-3 "><i class="fa fa-thumbs-o-up fa-lg"></i> @user.getTitle</div>
                     <div class="row-md-3 row-xs-3 "><i class="fa fa-thumbs-o-up fa-lg"></i> @user.getResearchFields
                         <a class="glyphicon-pencil glyphicon" style="float : right" href="@routes.ProfileController.get(user.getId().toString())">
-                            Edit</a></div>
+                            Edit</a>
+                    </div>
 
                 </div>
-                <div class="col-md-8 col-xs-12" style="margin : 0 px ; padding : 0 px ;">
+                <div class="col-md-8 col-xs-12" style="margin:0px; padding:0px;">
                     <div class="col-md-4 col-xs-4 well"><i class="glyphicon-home glyphicon"></i> <a href="@routes.ProfileController.get(user.getId().toString())">
-                        About</a></div>
+                        About</a>
+                    </div>
                     <div class="col-md-4 col-xs-4 well"><i class="glyphicon-pencil glyphicon"></i> Post</div>
                     <div class="col-md-4 col-xs-4 well"><i class="fa fa-thumbs-o-up fa-lg"></i> Followers</div>
                 </div>
             </div>
             <div class="box row" id="main">
                 <div class="col-md-4 row-xs-12"></div>
-                <div class="col-md-8 col-xs-12" style="margin : 0 px ; padding : 0 px ;">
+                <div class="col-md-8 col-xs-12" style="margin:0px; padding:0px;">
                         <!-- /top nav -->
                     <div class="full col-sm-12">
                         <div class="row">
@@ -142,7 +144,7 @@
                 </ul>
                 </p>
 
-            </div> </div>
-    </div>
+            </div>
+        </div>
     </body>
 </html>
