--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -59,6 +59,7 @@
 
         <script type='text/javascript' src='@routes.Assets.at("javascripts/jstree.js")'></script>
         <script type='text/javascript' src='@routes.Assets.at("javascripts/keyword_tree.js")'></script>
+        <script type='text/javascript' src='@routes.Assets.at("javascripts/home.js")'></script>
 
         <script src='@routes.Assets.at("javascripts/bootstrap-editable.min.js")'></script>
     </head>
@@ -96,8 +97,8 @@
                     <div class="col-md-4 col-xs-4 well"><i class="glyphicon-home glyphicon"></i> <a href="@routes.ProfileController.get(user.getId().toString())">
                         About</a>
                     </div>
-                    <div class="col-md-4 col-xs-4 well"><i class="glyphicon-pencil glyphicon"></i> Post</div>
-                    <div class="col-md-4 col-xs-4 well"><i class="fa fa-thumbs-o-up fa-lg"></i> Followers</div>
+                    <div id="btnPost" class="col-md-4 col-xs-4 well"><i class="glyphicon-pencil glyphicon"></i> Post</div>
+                    <div id="btnFollwers" class="col-md-4 col-xs-4 well"><i class="fa fa-thumbs-o-up fa-lg"></i> Followers</div>
                 </div>
             </div>
             <div class="box row" id="main">
@@ -105,7 +106,7 @@
                 <div class="col-md-8 col-xs-12" style="margin:0px; padding:0px;">
                         <!-- /top nav -->
                     <div class="full col-sm-12">
-                        <div class="row">
+                        <div id="post" class="row">
                             <form class="form-horizontal panel panel-default" action="@routes.PostController.newPost()" method="POST" id="postForm">
                                 <div class="panel-body">
                                     <input type="text" class="form-control clearfix" placeholder="What's on your mind?" id="postContent" name="postContent">
@@ -126,25 +127,27 @@
                                         Likes: @post.getNumOfLikes
                                     </div>
                                 </div>
-                            }
-                        </div>
+						}
+						
+					</div>
+					<div id="followers" class="panel"
+							style="color: black; display: none">
+							<div style="width: 20%">
+								<p>
+								<h4>Followers</h4>
+								<ul>
+									@for(user <- users) {
+									<li>@user.getFirstName @user.getLastName</li> }
+								</ul>
+								</p>
+
+							</div>
+						</div>
                     </div><!--/row-->
                 </div>
             </div>
         </div>
 
-        <div class="row panel" style="color : black">
-            <div style="width : 20 %">
-                <p>
-            <h4>Followers</h4>
-                <ul>
-                @for(user <- users) {
-                    <li>@user.getFirstName @user.getLastName </li>
-                }
-                </ul>
-                </p>
-
-            </div>
-        </div>
+        
     </body>
 </html>
