--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -35,10 +35,18 @@
                 @*</li>*@
                 <li><a href="#">Feeds</a>
                 </li>
-                <li><a href="#">Search</a>
-                </li>
-
             </ul>
+            <div class="col-sm-3 col-md-3">
+                <form class="navbar-form" role="search" action="/network/search/@id" method="POST">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                        <div class="input-group-btn" role="group">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            <button class="btn btn-default" type="button"><i class="glyphicon glyphicon-list"></i></button>
+                        </div>
+                    </div>
+                </form>
+            </div>
             <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown"><a href="#"
