--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -25,6 +25,7 @@
                 </li>
                 <li><a href="@routes.ProfileController.get(id)">About</a></li>
                 <li><a href="/">Post</a></li>
+                <li><a href="@routes.CriteriaController.home(id)">Users</a></li>
                 @*<li class="dropdown"><a href="#"*@
                 @*class="dropdown-toggle" data-toggle="dropdown">Support<b*@
                 @*class="caret"></b></a>*@
