Add main feed page for front end

--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -34,7 +34,7 @@
                 @*<li><a href="@routes.AccountController.searchServiceLog">Service Execution Log Search</a></li>*@
                 @*</ul>*@
                 @*</li>*@
-                <li><a href="#">Feeds</a>
+                <li><a href="@routes.MainController.home(id)">Main</a>
                 </li>
             </ul>
             <div class="col-sm-3 col-md-3">
