--- a/ApacheCMDA-Frontend/app/views/network/home.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/home.scala.html
@@ -161,9 +161,10 @@ posts: List[Post], follow:Int)
 										<div class="col-sm-2 col-md-2 col-lg-2">
 											@post.getAuthorName :
 										</div>
-										<div class="col-sm-10 col-md-10 col-lg-10">
-										@post.getContent
-										</div>
+                                        <div class="col-sm-9 col-md-9 col-lg-9">
+                                        @post.getContent
+                                        </div>
+                                        <div class="col-sm-1 col-md-1 col-lg-1 glyphicon glyphicon-pencil cursor"></div>
 									</div>
 									<div class="row">
 										<div class="col-sm-12 col-md-12 col-lg-12">
@@ -182,7 +183,7 @@ posts: List[Post], follow:Int)
 									<div class="row">
 										<div class="col-sm-1 col-lg-1 col-md-1">
 											<div data-value="@post.getNumOfLikes" title="@post.getId"
-											class="fa fa-thumbs-o-up fa-lg" style="margin-top:15px;cursor:pointer"></div>
+											class="fa fa-thumbs-o-up fa-lg cursor" style="margin-top:15px"></div>
 										</div>
 										<div class="col-sm-offset-10 col-sm-1">
 											<button data-value="@post.getId" class="btn btn-primary" style="float:right; margin-top:10px">Delete</button>
