--- a/ApacheCMDA-Frontend/app/views/network/main.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/main.scala.html
@@ -13,7 +13,7 @@ License for the specific language governing permissions and * *
 limitations under the License. *
 *******************************************************************************@
 @(user: User, userForm: play.data.Form[User], users: List[User], viewerId: String,
-        posts: List[Post], follow:Int)
+        posts: List[Post], popular: List[Post], follow:Int)
 @import util.TimeConvert
 
 
@@ -99,7 +99,34 @@ limitations under the License. *
       </div>
 
       <div class="box row" id="main">
-        <div class="col-md-4 row-xs-12"></div>
+        <div class="col-md-4 row-xs-12">
+          <div class="alert alert-success" role="alert"">
+              Top 10 Popular Posts
+          </div>
+        @for(post <- popular) {
+          <div id="post_@post.getId" class="panel panel-default">
+            <div class="panel-body">
+              <div class="row">
+                <div class="col-sm-12">
+                  @post.getContent
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4">
+                        Likes: @post.getNumOfLikes
+                </div>
+                <div class="col-sm-8">
+                  @TimeConvert.format(post.getTimestamp)
+                </div>
+              </div>
+            </div>
+          </div>
+        }
+        </div>
         <div class="col-md-8 col-xs-12" style="margin: 0px; padding: 0px;">
             <!-- /top nav -->
           <div class="full col-sm-12">
