--- a/ApacheCMDA-Frontend/app/views/network/main.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/main.scala.html
@@ -207,7 +207,7 @@ limitations under the License. *
                       <div class="col-sm-2 col-md-2 col-lg-2">
                         <div class="thumbnail">
                           <img class="img-responsive user-photo"
-                          src="http://www.wpclipart.com/signs_symbol/speech_bubbles/speech_gradients/comment_bubble_gradient_blue_right_T.png">
+                          src="/assets/images/comment.png">
                         </div>
                       </div>
 
