1. Add herf to user's home page when doing user search. 2. Add a myhome function to redirect a user's to its original page

--- a/ApacheCMDA-Frontend/app/views/network/header.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/header.scala.html
@@ -29,7 +29,7 @@
         <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" style="height :">
             <ul class="nav navbar-nav">
 
-                <li><a href="@routes.HomeController.home(id)">Home</a>
+                <li><a href="@routes.HomeController.myHome()">Home</a>
                 </li>
                 <li><a href="@routes.ProfileController.get(id)">About</a></li>
                 <li><a href="@routes.CriteriaController.home(id)">Users</a></li>
