--- a/ApacheCMDA-Frontend/app/views/network/searchUser.scala.html
+++ b/ApacheCMDA-Frontend/app/views/network/searchUser.scala.html
@@ -142,6 +142,11 @@ searchedUser: List[User], follow:Int)
                                 <div class="col-md-8">
                                     <h4 class="media-heading">@user.getFirstName @user.getLastName</h4>
                                     <div>Research Interests: @user.getResearchFields</div>
+									<div>
+										<form action="/network/search/go/@viewerId/@user.getId" method="GET">
+											<input type="submit" value="HOME PAGE">
+										</form>
+									</div>
                                 </div>
                             </div>
                         }
